overflow issue solved
solved problem where you could scroll out of the page

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
     scroll-behavior: smooth;
   }
   
+  html, body {
+    overflow-x: hidden;
+  }
+
   body {
     @apply text-gray-900 antialiased;
     background: linear-gradient(
